--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ Version: 1.0
 */
 
 body {
-    color: #fff;
-    background-color: black;
+    color: #000;
+    background-color: #fff;
 }
 
 .container p {
