--- a/style.css
+++ b/style.css
@@ -3,12 +3,13 @@ Theme Name: Dreadfulnights
 Author: Ryan Dulac
 Version: 1.0
 */
-
 body {
     color: #000;
     background-color: #fff;
 }
-
+/* .content-wrapper {
+    height: 100vh;
+} */
 .container p {
     word-wrap: break-word;
 }
