--- a/style.css
+++ b/style.css
@@ -7,9 +7,13 @@ body {
     color: #000;
     background-color: #fff;
 }
-/* .content-wrapper {
-    height: 100vh;
-} */
+footer {
+    position: fixed;
+    bottom: 0;
+    background-color: #333;
+    color: #fff;
+    width: 100%;
+}
 .container p {
     word-wrap: break-word;
 }
