--- a/style.css
+++ b/style.css
@@ -33,3 +33,12 @@ a.nav-link{
 .form-inline{
     font-family: 'Amatic SC', cursive;
 }
+
+.content-opacity{
+    opacity: 0.7;
+}
+
+.col-md-8 .card{
+    font-family: 'Roboto';
+
+}
